--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "prisma": "^6.6.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "prisma": {
