--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "eslint-config-prettier": "^10.1.5",
     "prisma": "^6.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
